--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -3,13 +3,21 @@
 {% block content %}
     <div class="post">
         {% if post.published_date %}
-            <div class="date">
-                {{ post.published_date }}
-            </div>
+        <div class="date">
+            {{ post.published_date }}
+        </div>
+        {% else %}
+        <form method="POST" action="{% url 'post_publish' pk=post.pk %}" class="post-form">{% csrf_token %}
+            <button type="submit" class="post btn btn-secondary" name="publish">Publish</button>
+        </form>
         {% endif %}
-        {% if user.is_authenticated %}
+        
         <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
-        {% endif %}
+        <form method="POST" action="{% url 'post_remove' pk=post.pk %}" class="post-form">{% csrf_token %}
+            <button type="submit" class="post btn btn-danger" name="delete">
+            Delete
+            </button>
+        </form> 
         <h2>{{ post.title }}</h2>
         <p>{{ post.text|linebreaksbr }}</p>
     </div>
